--- a/de/trans/trLevels.dita
+++ b/de/trans/trLevels.dita
@@ -5,27 +5,27 @@
     <body>
          <section id="section_v4l_k2t_mqb">
             <title>Allgemeine Erklärung zu den GT-Level</title>
-            <p>Level 1: <xref href="https://ocr-d.de/de/gt-guidelines/trans/level_1_4.html"
+            <p><xref href="https://ocr-d.de/de/gt-guidelines/trans/level_1_4.html"
                     format="html" scope="external"
-                    >https://ocr-d.de/de/gt-guidelines/trans/level_1_4.html</xref></p>
-            <p>Level 2: <xref href="https://ocr-d.de/de/gt-guidelines/trans/level_2_2.html"
+                    >Level 1</xref></p>
+            <p><xref href="https://ocr-d.de/de/gt-guidelines/trans/level_2_2.html"
                     format="html" scope="external"
-                    >https://ocr-d.de/de/gt-guidelines/trans/level_2_2.html</xref></p>
-            <p>Level 3: <xref href="https://ocr-d.de/de/gt-guidelines/trans/level_3_1.html"
+                >Level 2</xref></p>
+            <p><xref href="https://ocr-d.de/de/gt-guidelines/trans/level_3_1.html"
                     format="html" scope="external"
-                    >https://ocr-d.de/de/gt-guidelines/trans/level_3_1.html</xref></p>
+                >Level 3</xref></p>
         </section>
         <section id="section_w4l_k2t_mqb">
             <title>Transkription im jeweiligen Level?</title>
-            <p>Level 1 <xref href="https://ocr-d.de/de/gt-guidelines/trans/tr_level_1_4.html"
+            <p><xref href="https://ocr-d.de/de/gt-guidelines/trans/tr_level_1_4.html"
                     format="html" scope="external"
-                    >https://ocr-d.de/de/gt-guidelines/trans/tr_level_1_4.html</xref></p>
-            <p>Level 2 <xref href="https://ocr-d.de/de/gt-guidelines/trans/tr_level_2_4.html"
+                >Transkription im Level 1</xref></p>
+            <p><xref href="https://ocr-d.de/de/gt-guidelines/trans/tr_level_2_4.html"
                     format="html" scope="external"
-                    >https://ocr-d.de/de/gt-guidelines/trans/tr_level_2_4.html</xref></p>
-            <p>Level 3 <xref href="https://ocr-d.de/de/gt-guidelines/trans/tr_level_3_4.html"
+                >Transkription im Level 2</xref></p>
+            <p><xref href="https://ocr-d.de/de/gt-guidelines/trans/tr_level_3_4.html"
                     format="html" scope="external"
-                    >https://ocr-d.de/de/gt-guidelines/trans/tr_level_3_4.html</xref></p>
+                >Transkription im Level 2</xref></p>
         </section>
         <section id="section_x4l_k2t_mqb">
             <title>Erklärungen zu bestimmten Fällen wie Ligaturen, Satzzeichen, Unterschiede
